--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
 		<junit.version>4.11</junit.version>
 		<log4j.version>1.2.17</log4j.version>
 		<sonar.host.url>http://13.126.247.195:9000/</sonar.host.url>
-                <sonar.login>admin</sonar.login>
+                <sonar.login>71b2c37daa78ec50edfb790a296e154be24f3fe2</sonar.login>
 		
              
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
