--- a/pom.xml
+++ b/pom.xml
@@ -99,7 +99,7 @@
 	    <repository>
 	      <id>nexus</id>
 	      <name>Mithun Technologies Releases Nexus Repository</name>
-	      <url>http://13.233.119.31:9980/mithuntechnologies/repository/walmart-release/</url>
+	      <url>httphttp://13.127.243.240:8081/repository/walmart-relase//</url>
 	    </repository>
 	    
 	    <snapshotRepository>
